--- a/public/work.html
+++ b/public/work.html
@@ -15,9 +15,10 @@
     </form>
 
     <h1>Stress 내역</h1>
+    <a href="./data/.html">.html</a><br><a href="./data/test.html">test.html</a><br><a href="./data/ㄴㅇㄴㅁㅇ.html">ㄴㅇㄴㅁㅇ.html</a><br><a href="./data/ㅇ.html">ㅇ.html</a><br><a href="./data/ㅇㅇㅇ.html">ㅇㅇㅇ.html</a><br><a href="./data/ㅇㅇㅇㅁ.html">ㅇㅇㅇㅁ.html</a><br>
 
     
 
-    <script src="./work.js"></script>
+
   </body>
 </html>
