--- a/public/work.html
+++ b/public/work.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Work</title>
-  </head>
-  <body>
-    <form action="/submit" method="POST">
-      <label for="title">제목 :</label><br />
-      <input type="text" id="title" name="title" /><br /><br />
-      <label for="content">내용 :</label><br />
-      <textarea name="content" id="content"></textarea><br /><br />
-      <input type="submit" value="submit" />
-    </form>
-
-    <h1>Stress 내역</h1>
-    <a href="./data/.html">.html</a><br><a href="./data/test.html">test.html</a><br><a href="./data/ㄴㅇㄴㅁㅇ.html">ㄴㅇㄴㅁㅇ.html</a><br><a href="./data/ㅇ.html">ㅇ.html</a><br><a href="./data/ㅇㅇㅇ.html">ㅇㅇㅇ.html</a><br><a href="./data/ㅇㅇㅇㅁ.html">ㅇㅇㅇㅁ.html</a><br>
-
-    
-
-
-  </body>
-</html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Work</title>
+    </head>
+    <body>
+      <form action="/submit" method="POST">
+        <label for="title">제목 :</label><br />
+        <input type="text" id="title" name="title" /><br /><br />
+        <label for="content">내용 :</label><br />
+        <textarea name="content" id="content"></textarea><br /><br />
+        <input type="submit" value="submit" />
+      </form>
+      <h1>Stress 내역</h1>
+      <a href="./data/undefined.html">undefined.html</a><br><a href="./data/ㄴㅇㄹ.html">ㄴㅇㄹ.html</a><br><a href="./data/ㅇ.html">ㅇ.html</a><br>
+    </body>
+  </html>
