--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,13 @@
   <body>
     <div id="root">
       <div id="category">
-        <div id="work"><a href="/work.html" style="text-decoration: none; color: black">Work</a></div>
-        <div id="home"><a href="/home.html" style="text-decoration: none; color: black">Home</a></div>
-        <div id="study"><a href="/study.html" style="text-decoration: none; color: black">Study</a></div>
-        <div id="couple"><a href="/couple.html" style="text-decoration: none; color: black">Couple</a></div>
+        <div id="work"><a href="/work.html" >Work</a></div>
+        <div id="home"><a href="/home.html" >Home</a></div>
+        <div id="study"><a href="/study.html" >Study</a></div>
+        <div id="couple"><a href="/couple.html" >Couple</a></div>
       </div>
       <img src="https://i.pinimg.com/564x/2b/99/cc/2b99cc983e571179790ebdfdfe294b44.jpg" alt="" />
     </div>
   </body>
 </html>
+<div id="root"></div>
