댓글기능 추가

--- a/public/work.html
+++ b/public/work.html
@@ -14,6 +14,6 @@
         <input type="submit" value="submit" />
       </form>
       <h1>Stress 내역</h1>
-      <a href="./data/undefined.html">undefined.html</a><br><a href="./data/ㄴㅇㄹ.html">ㄴㅇㄹ.html</a><br><a href="./data/ㅇ.html">ㅇ.html</a><br>
+      <a href="./data/test.html">test.html</a><br>
     </body>
   </html>
